# comment: upload ejs page and related resources

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
-extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+<!-- <%-// include('layout.ejs') %> -->
+<div class='body'>
+    <h2>資策會AI人工智慧應用開發班</h2>
+    <h1>專題：駕駛人精神狀態監控</h1>
+    <p>這裡放一些簡介，圖片等等...</p>
+</div>
