--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,26 @@
 body {
-  padding: 50px;
+  padding: 70px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
 a {
   color: #00B7FF;
+}
+header {
+  position: relative;
+}
+footer {
+  position: absolute;
+  bottom: 1%;
+}
+.videDisplayDiv {
+  background-color: rgb(20, 20, 20);
+  width:100%;
+  height:500px;
+}
+.imgDisplay {
+  padding: 50px;
+}
+.analysisResult {
+  padding: 50px;
+  color: rgb(187, 187, 187);
 }
