--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,20 @@
-doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>III AI class project</title>
+    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/bootstrap.css">
+    <script src="./js/jquery-3.4.1.js"></script>
+    <script src="./js/socket.io/4.0.1/socket.io.js"></script>
+</head>
+<body>
+    <%- include('partial/header') %>
+    <% data = JSON.parse(data) %>
+    <%- include(ejsPage, data) %>
+    <!-- /.container -->
+    <%- include('partial/footer') %>
+</body>
+</html>
