#comment:Front and back connection, video transmission

--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="text-muted footer">
+<footer class="text-muted footer" >
     <div class="container py-3">
     <p>This is footer.</p>
     <p>Project start on Apr.30th 2021 &copy; </p>
