--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,17 +10,30 @@ header {
 }
 footer {
   position: absolute;
-  bottom: 1%;
 }
 .videDisplayDiv {
   background-color: rgb(20, 20, 20);
   width:100%;
-  height:500px;
+  /* height:500px; */
+  
+
 }
 .imgDisplay {
-  padding: 50px;
+  padding: 5px;
+  width : 360px;
+  margin-left: 5px ;
+  /* height : 270px ; */
 }
 .analysisResult {
   padding: 50px;
   color: rgb(187, 187, 187);
+}
+.footer {
+  margin-top: 0px; /*隨footer高度需做調整*/
+  /* background-color: blue; */
+}
+.displayHide {
+  visibility: hidden;
+  position: fixed;
+  display:block;
 }
