--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./stylesheets/bootstrap.css">
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/socket.io/4.0.1/socket.io.js"></script>
+    
+    </style> 
 </head>
 <body>
     <%- include('partial/header') %>
@@ -16,5 +18,6 @@
     <%- include(ejsPage, data) %>
     <!-- /.container -->
     <%- include('partial/footer') %>
+   
 </body>
 </html>
