# comment: link fatigue model and change web page style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,15 @@
 
 <!-- <%-// include('layout.ejs') %> -->
 <div class='body'>
-    <h2>資策會AI人工智慧應用開發班</h2>
-    <h1>專題：駕駛人精神狀態監控</h1>
-    <p>這裡放一些簡介，圖片等等...</p>
+    <h4>資策會AI人工智慧應用開發班</h4>
+    <h5>專題：</h5>
+    <h2>駕駛行為偵測系統DMS(Driver Monitoring System)</h2>
+    <p>動機</p>
+    <p>分心、打瞌睡或是受傷的人類駕駛員，會成為殺死他們自己或其他用路人的兇手。
+        根據世界衛生組織(WHO)的統計數字，與人類駕駛員責任相關的交通意外死亡人數，每一年達到130萬。
+        疲勞駕駛難以認定，警察或科學儀器無法根據駕駛車輛軌跡判定，難靠外在執法，須自我約束並加強駕駛人意識。</p>
+    <p>許多汽車大廠新款車種已經有配備DMS系統，然而道路上車輛大多沒有配備，只能靠駕駛人自我約束，再多的後悔與賠償挽回不了破碎的家庭，而現今AI技術成熟，開發提醒瞌睡裝置設備有機會阻止這一切。</p>
+    <div>
+        <img src="/images/project_scope.png" alt="" srcset="" width="600">
+    </div>
 </div>
