--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -16,9 +16,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./realtime">Real Time Demo</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="./aboutUs">About us</a>
-                </li>
+                </li> -->
+                <h3 class="headText">駕駛行為偵測系統(Driver Monitoring System)</h3>
             </ul>
         </div>
     </nav>
