--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,9 @@ footer {
   margin-left: 5px ;
   /* height : 270px ; */
 }
+.tdTop {
+  vertical-align:top;
+}
 .analysisResult {
   padding: 50px;
   color: rgb(187, 187, 187);
@@ -36,4 +39,9 @@ footer {
   visibility: hidden;
   position: fixed;
   display:block;
+}
+.headText {
+  position: relative;
+  font-size: 1.5rem;
+  color: darkblue;
 }
