--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="text-muted footer" >
     <div class="container py-3">
-    <p>This is footer.</p>
+    <p>製作人：涂佐東，黃伯菘，喬傳恩，林彥文</p>
     <p>Project start on Apr.30th 2021 &copy; </p>
     </div>
 </footer>
