--- a/views/video.ejs
+++ b/views/video.ejs
@@ -2,7 +2,7 @@
 <%-// include('layout.ejs') %>
 
 <div class='body'>
-    <h2>使用預錄影片做分析監控</h2>
+    <h4>使用預錄影片做分析監控</h4>
     <form id="uImgForm" action="/upload_file" method="post" enctype="multipart/form-data">
         <input id="image-file" type="file" value = '選擇路況影片' name="myfile" accept="video/*" data-target="file-uploader">
         <input type="hidden" value="video" name='page'>
@@ -20,13 +20,16 @@
             <tr>
                 <td>
                     <div class="imgDisplay">
-                        <video id='videoX' class="imgDisplay" src='./images/video/driver.mp4' controls='' ></video>
+                        <!-- <video id='videoX' class="imgDisplay" src='./images/video/driver.mp4' controls='' ></video> -->
+                        <img id="displayCarView" class="imgDisplay" width="320" src=<%= img %> alt="./images/logos.png">
+                        <div class="textClass displayHide" id="displayCarViewText" ></div>
+                        <video id="videoX" class="displayHide" loop muted src="./images/video/driver.mp4"></video>
                     </div>
                     <div class="imgDisplay">
-                        <video id='videoY' class="imgDisplay" src='./images/video/face.mp4' controls='' ></video>
+                        <video id='videoY' class="imgDisplay" src='./images/video/face.mp4' loop muted></video>
                     </div>
                 </td>
-                <td>
+                <td class="tdTop">
                     <div class="analysisResult">
                             <table>
                                 <tr>
@@ -36,12 +39,12 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p><b>Distraction</b></p>
+                                        <p><b>fatigue</b></p>
                                     </td>
-                                    <td id=distScore></td>
-                                    <td id=distRisk></td>
+                                    <td id=fatigueScore></td>
+                                    <td id=fatigueRisk></td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td>
                                         <p>Concentration專注前方</p>
                                     </td>
@@ -96,17 +99,22 @@
                                     </td>
                                     <td id=happyScore></td>
                                     <td id=happyRisk></td>
-                                </tr>
-                                <!-- <tr>
+                                </tr> -->
+                                <tr>
                                     <td><p>speed車速</p></td>
-                                    <td id=speed></td>
-                                    <td></td>
+                                    <td id=speedScore></td>
+                                    <td id=speedRisk></td>
                                 </tr>
                                 <tr>
-                                    <td><p>distance前車距</p></td>
-                                    <td id=distance></td>
-                                    <td></td>
-                                </tr> -->
+                                    <td><p>車道偏移</p></td>
+                                    <td id=landScore></td>
+                                    <td id=landRisk></td>
+                                </tr>
+                                <tr>
+                                    <td><p>前車距</p></td>
+                                    <td id=distanceScore></td>
+                                    <td id=distanceRisk></td>
+                                </tr>
                             </table>
                     </div>
                 </td>
