# comment: add mongodb and login function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./stylesheets/styleLogin.css">
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/socket.io/4.0.1/socket.io.js"></script>
-    <script src="/js/webcamMobile.js"></script>
+    <script src="./js/webcamMobile.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -25,19 +25,23 @@
             <i class="fa fa-user"></i>
             <input type="password" placeholder="Password" />
             <i class="fa fa-key"></i> -->
-            <div id='webcamDiv'></div>
+            <div id='webcamDiv'>
+                <img class="icon" src="./images/faceLoginIcon.png" alt="" srcset="">
+            </div>
             <button class="bottom" id="faceLogin">
                 <i class="spinner"></i>
-                <span class="state">Face Log in</span>
+                <span class="state" id="signinText">Face Log in</span>
             </button>
         </form>
         <form class="tabcontent" id="signupForm">
-            <input type="text" placeholder="Username" autofocus/>
+            <input id="userName" type="text" placeholder="Username" autofocus/>
             <i class="fa fa-user"></i>
-            <div id='webcamDiv'></div>
+            <div id='webcamDiv2'>
+                <img class="icon" src="./images/faceLoginIcon.png" alt="" srcset="">
+            </div>
             <button class="bottom" id="faceSignup">
                 <i class="spinner"></i>
-                <span class="state">Face Sign Up</span>
+                <span class="state" id="signupText">Face Sign Up</span>
             </button>
         </form>
     </div>
