--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 70px;
+  padding: 70px 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 a {
@@ -28,7 +28,7 @@ footer {
   vertical-align:top;
 }
 .analysisResult {
-  padding: 50px;
+  padding: 20px 50px;
   color: rgb(187, 187, 187);
 }
 .footer {
@@ -44,4 +44,14 @@ footer {
   position: relative;
   font-size: 1.5rem;
   color: darkblue;
+}
+td {
+  vertical-align:top;
+}
+table{
+  width: 100%;
+  table-layout: fixed;
+}
+#logoutP {
+  cursor: pointer;
 }
