--- a/public/stylesheets/styleLogin.css
+++ b/public/stylesheets/styleLogin.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column; 
   justify-content: center;
   width: 100%;
-  min-height: 100%;
+  min-height: 80%;
   padding: 20px;
   background: rgba(darken(#2196F3,40%), 0.85);
 }
@@ -39,10 +39,10 @@ body {
   padding-bottom: 80px;
   box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
 }
-/* .loading button {
+.loading button {
       max-height: 100%;
       padding-top: 50px;
-    }   */
+    }  
 
 .loading button .spinner {
       opacity: 1;
@@ -109,7 +109,7 @@ input:focus {
     padding-bottom: 10px;
   }
   
-  button.bottom {
+  .bottom {
     width: 100%;
     height: 100%;
     padding: 10px 10px;
@@ -129,7 +129,8 @@ input:focus {
     transition: all 0.1s ease-out;
       border-bottom-width: 7px;
   }
- .login button .spinner {
+ /* .login button .spinner { */
+ .spinner {
       display: block;
       width: 40px;
       height: 40px;
@@ -197,4 +198,7 @@ input:focus {
 }
 footer {
   color: white;
+}
+.icon {
+  width: 100%;
 }
