--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>III AI class project</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
-    <link rel="stylesheet" href="./stylesheets/bootstrap.css">
+    <link rel="stylesheet" href="./stylesheets/bootstrap-4.4.1.css">
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/socket.io/4.0.1/socket.io.js"></script>
+    <script src="./js/bootstrap-4.4.1.min.js"></script>
     
     </style> 
 </head>
