--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -1,25 +1,21 @@
 <header class="header">
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="./"><img src="./images/logos.png" style="height:40px" alt="My logo"> </a>
+        <a class="navbar-brand" href="./"><img src="./images/logos.png" style="height:40px" alt="My logo"> <span class="h4 mx-1 headText">駕駛行為偵測系統</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <p class="nav-link" id="logoutP">Logout <span class="sr-only">(current)</span></p>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./video">Video Demo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./realtime">Real Time Demo</a>
+                    <a class="nav-link active" href="./realtime">Real Time Demo</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="./aboutUs">About us</a>
-                </li> -->
-                <h3 class="headText">駕駛行為偵測系統(Driver Monitoring System)</h3>
             </ul>
         </div>
     </nav>
