--- a/views/realtime.ejs
+++ b/views/realtime.ejs
@@ -3,7 +3,7 @@
 <script src="/js/webcamMobile.js"></script>
 
 <div class='body'>
-    <h4>使用即時鏡頭做分析監控</h4>
+    <!-- <h4>使用即時鏡頭做分析監控</h4> -->
     <!-- <form id="uImgForm" action="/upload_file" method="post" enctype="multipart/form-data">
         <input id="image-file" type="file" value='選擇路況影片' name="myfile" accept="video/*" data-target="file-uploader">
         <input type="hidden" value="realtime" name='page'>
@@ -12,8 +12,13 @@
     </form> -->
     <!-- <button id='video_strvideo'>播放影片</button>
     <button id='video_stpvideo'>暫停影片</button><br> -->
-    <button id='sCamBtn'>start camera</button>
-    <button id="okButton">Send Image</button>
+    <table>
+        <tr>
+            <td><p id="nameTag"></p></td>
+            <td><button id='sCamBtn' type="button" class="btn btn-primary btn-lg">開始監控</button></td>
+        </tr>
+    </table>
+    <!-- <button id="okButton">Send Image</button> -->
     <div id="displayResponse"></div>
     <div class="videDisplayDiv">
         <table>
@@ -24,94 +29,38 @@
                         <!-- <img id="displayCarView" width="320" src=<%= img %> alt="./images/logos.png">
                         <div class="textClass displayHide" id="displayCarViewText" ></div>
                         <video id="videoX" class="displayHide" loop muted src="./images/video/driver.mp4"></video> -->
-                        <img id='realImg_driver' src=<%= img %> alt="./images/logos_driver.png" width="500px">
+                        <!-- <img id='realImg_driver' src=<%= img %> alt="./images/logos_driver.png" width="500px"> -->
                         <div id='drivercamDiv' >  
                     </div>
                     <div class="imgDisplay" id="imgDisplayDiv">
-                        <img id='realImg' src=<%= img %> alt="./images/logos.png" width="500px">
+                        <!-- <img id='realImg' src=<%= img %> alt="./images/logos.png" width="500px"> -->
                         <div id='webcamDiv' >
                         </div>
                     </div>
                 </td>
+            </tr>
+            <tr>
                 <td class="tdTop">
                     <div class="analysisResult">
                         <table>
                             <tr>
                                 <th>
-                                    <p>item分類</p>
+                                    <p>分類</p>
                                 </th>
                                 <th>
-                                    <p>score評分</p>
+                                    <p>評分</p>
                                 </th>
                                 <th>
-                                    <p>risk風險</p>
+                                    <p>風險</p>
                                 </th>
                             </tr>
                             <tr>
-                                <td>
-                                    <p><b>Fatigue</b></p>
-                                </td>
+                                <td><p><b>疲勞度</b></p></td>
                                 <td id=fatigueScore></td>
                                 <td id=fatigueRisk></td>
                             </tr>
-                            <!-- <tr>
-                                <td>
-                                    <p>Concentration專注前方</p>
-                                </td>
-                                <td id=concScore></td>
-                                <td id=concRisk></td>
-                            </tr>
                             <tr>
-                                <td>
-                                    <p>Eye closure閉眼</p>
-                                </td>
-                                <td id=eyeClosureScore></td>
-                                <td id=eyeClosureRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>blink眨眼</p>
-                                </td>
-                                <td id=blinkScore></td>
-                                <td id=blinkRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>yawn打呵欠</p>
-                                </td>
-                                <td id=yawnScore></td>
-                                <td id=yawnRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p><b>Emotion</b></p>
-                                </td>
-                                <td id=emotionScore></td>
-                                <td id=emotionRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>Angry生氣</p>
-                                </td>
-                                <td id=angryScore></td>
-                                <td id=angryRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>Sad悲傷</p>
-                                </td>
-                                <td id=sadScore></td>
-                                <td id=sadRisk></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p>Happy開心</p>
-                                </td>
-                                <td id=happyScore></td>
-                                <td id=happyRisk></td>
-                            </tr> -->
-                            <tr>
-                                <td><p>speed車速</p></td>
+                                <td><p>車速</p></td>
                                 <td id=speedScore></td>
                                 <td id=speedRisk></td>
                             </tr>
@@ -135,5 +84,6 @@
 </div>
 <% dataS = JSON.stringify(data) %>
 <% console.log("[LOG] Render realtime page") %>
-<form action=""><input id="storeData" type="hidden" value="<%= dataS %>"></form>
+<form action=""><input id="storeData" type="hidden" value="<%= dataS %>">
+<input type="hidden" id="token" value="<%= token %>"></form>
 <script type="module" src="./js/pageAction.js"></script>
